--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,42 +1,34 @@
 name: Deploy to GitHub Pages
 
-# Запускаем workflow при push в ветку main
 on:
   push:
     branches:
       - main
 
-# Определение работы
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
-      pages: write
-      id-token: write  # Разрешаем доступ к GitHub Pages для деплоя
+      contents: write
 
     steps:
-    # Шаг 1: Клонирование репозитория
     - name: Checkout the repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
 
-    # Шаг 2: Установка Node.js
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
+    - name: Install Node.js
+      uses: actions/setup-node@v3
       with:
-        node-version: '20'  # Указываем нужную версию Node.js
+        node-version: '20'
 
-    # Шаг 3: Установка зависимостей
     - name: Install dependencies
       run: npm ci
 
-    # Шаг 4: Сборка проекта
     - name: Build the project
       run: npm run build
 
-    # Шаг 5: Деплой на GitHub Pages
     - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v4  # Используем новую версию action
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        publish_dir: ./dist  # Указываем директорию для деплоя (для React — это папка build)
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist
